--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/Purchases.html
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/Purchases.html
@@ -628,7 +628,7 @@
           </div>
           
           <div class="form-group">
-            <label class="required">Bill Number</label>
+            <label class="required">Billing Number</label>
             <input type="text" id="poBillNum" class="form-control" readonly>
           </div>
         </div>
@@ -652,7 +652,7 @@
                 <th>Supplier Name</th>
                 <th>County</th>
                 <th>Town</th>
-                <th>Bill Number</th>
+                <th>Billing Number</th>
                 <th>Item ID</th>
                 <th>Item Type</th>
                 <th>Item Category</th>
