--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/Inventory.html
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/Inventory.html
@@ -10,15 +10,15 @@
   <title>{% block title %} INVENTORY {% endblock %}</title>
   
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Poppins:wght@400;500;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Poppins:wght@400;500;600&family=Roboto:wght@400;500&display=swap">
   
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
   <!-- Select2 -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css">
   
-  <link rel="stylesheet" href="{% static 'Inventory.css' %}">
+  <!--link rel="stylesheet" href="{% static 'Inventory.css' %}"-->
 
   <style>
     :root {
